--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,14 @@
   --menu-color: #9f6d59;
 }
 
+html {
+  overflow-x: hidden;
+}
+
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
 @font-face {
   font-family: "Minion Pro Regular";
   font-style: normal;
@@ -111,8 +119,10 @@ body {
 }
 
 .container {
-  width: 80%;
-  margin: 0 auto;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 150rem;
 }
 
 img {
@@ -134,11 +144,53 @@ img {
 }
 
 .menu__list-item a {
+  position: relative;
   text-transform: uppercase;
   font-size: 2.2rem;
   text-decoration: none;
   color: var(--menu-color);
   font-family: "Source Sans Pro", sans-serif;
+  opacity: 0.7;
+  transition: all 300ms;
+}
+
+.menu__list-item a::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 3px;
+  top: 100%;
+  left: 0;
+  background: var(--menu-color);
+  transition: transform 0.5s;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+.menu__list-item a:hover {
+  opacity: 1;
+}
+
+.menu__list-item a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.menu__list-item .current {
+  opacity: 1;
+}
+
+.menu__list-item .current::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 3px;
+  top: 100%;
+  left: 0;
+  background: var(--menu-color);
+  transition: transform 0.5s;
+  transform: scaleX(1);
+  transform-origin: right;
 }
 
 .logo_header {
@@ -154,6 +206,7 @@ img {
 
 #description {
   text-align: center;
+  padding: 90px 0;
 }
 
 .description__title {
@@ -203,18 +256,65 @@ section {
   justify-content: space-between;
 }
 
+.estudio__items a {
+  text-decoration: none;
+}
+
 .estudio__items-item {
-  height: 200px;
-  width: 200px;
+  height: 27rem;
+  width: 27rem;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  background: #ddbea9;
+  /* background: #ddbea9; */
+}
+
+.estudio__items-item-overlay {
+  background-color: #ddbea9;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: all 500ms;
+}
+
+.estudio__items-item-overlay:hover {
+  opacity: 1;
+}
+
+.estudio__items-item-1 {
+  background-image: url("../img/portfolio/1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-origin: center;
+}
+
+.estudio__items-item-2 {
+  background-image: url("../img/portfolio/2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-origin: center;
+}
+
+.estudio__items-item-3 {
+  background-image: url("../img/portfolio/3.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-origin: center;
+}
+
+.estudio__items-item-4 {
+  background-image: url("../img/portfolio/2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-origin: center;
 }
 
 .estudio__items-item p {
-  font-size: 2rem;
+  font-size: 2.5rem;
   line-height: 1.3;
   text-align: center;
   width: 55%;
@@ -275,9 +375,19 @@ h1 {
   color: var(--menu-color);
 }
 
-.talk-1-p {
+.talk-1-p,
+.insta p {
   font-size: 2.2rem;
   color: var(--menu-color);
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.insta span {
+  font-weight: bold;
+}
+
+.insta p {
+  margin-bottom: 20px;
 }
 
 .talk-2-p a {
@@ -289,4 +399,184 @@ h1 {
 .talk-3 p {
   font-size: 2.2rem;
   color: #353535;
+}
+
+.divider {
+  background: #955e48;
+  text-align: center;
+}
+
+.divider p {
+  color: #ddbea9;
+  font-size: 2rem;
+  text-transform: uppercase;
+  font-family: "Source Sans Pro", sans-serif;
+  padding: 3rem 0;
+}
+
+.swiper-slide p {
+  padding-bottom: 60px;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--menu-color);
+}
+
+.mobile-only {
+  display: none;
+}
+
+@media only screen and (max-device-width: 480px) {
+  .desktop-only {
+    display: none;
+  }
+
+  .mobile-only {
+    display: block;
+  }
+  .top-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 0;
+  }
+
+  .logo_header {
+    width: 50%;
+  }
+
+  .menu-mobile__overlay {
+    position: fixed;
+    top: 0;
+    right: 100%;
+    width: 100%;
+    height: 100vh;
+    background: #ffe8d6;
+    z-index: 10;
+    transition: all 500ms;
+  }
+
+  .menu__list {
+    flex-direction: column;
+    height: 50%;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .menu {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  #nav-icon3 {
+    width: 60px;
+    height: 45px;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 0.5s ease-in-out;
+    -moz-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+    z-index: 999;
+  }
+
+  #nav-icon3 span {
+    display: block;
+    position: absolute;
+    height: 9px;
+    width: 100%;
+    background: var(--menu-color);
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: 0.25s ease-in-out;
+    -moz-transition: 0.25s ease-in-out;
+    -o-transition: 0.25s ease-in-out;
+    transition: 0.25s ease-in-out;
+  }
+
+  #nav-icon3 span:nth-child(1) {
+    top: 0px;
+  }
+
+  #nav-icon3 span:nth-child(2),
+  #nav-icon3 span:nth-child(3) {
+    top: 18px;
+  }
+
+  #nav-icon3 span:nth-child(4) {
+    top: 36px;
+  }
+
+  #nav-icon3.open span:nth-child(1) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+  }
+
+  #nav-icon3.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  #nav-icon3.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+  }
+
+  #nav-icon3.open span:nth-child(4) {
+    top: 18px;
+    width: 0%;
+    left: 50%;
+  }
+
+  .description__content,
+  .depoimento {
+    width: 80%;
+  }
+
+  .estudio__items {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+
+  #depoimentos h3 {
+    font-size: 4rem;
+  }
+
+  #depoimentos h1 {
+    font-size: 2.5rem;
+    margin-left: 10px;
+  }
+
+  #infos {
+    flex-direction: column;
+    padding-top: 0;
+    gap: 60px;
+  }
+
+  .map {
+    margin: 0;
+  }
+
+  iframe {
+    height: 300px;
+  }
 }
